--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,6 @@
     <color name="sky_500">#FF384e77</color>
     <color name="sky_700">#FF18314f</color>
 
-    <color name="leaf_200">#FFe6f9af</color>
+    <color name="leaf_200">#B3DC38</color>
     <color name="leaf_700">#7D885E</color>
 </resources>
